changed style some more

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <div id='buttons'>
 
-      <button class='red' value='ac'>AC</button>
-      <button class='red' value='ce'>CE</button>
+      <button class='blue' value='ac'>AC</button>
+      <button class='gray' value='ce'>CE </button>
       <button value='/'>&divide;</button>
       <button value='*'>x</button>
 
@@ -73,7 +73,6 @@
 <footer id="footer" class="text-center">
   <div class="container2">
     Designed & Coded by
-   
     <div class="credits btn btn-basic"><i class="fa fa-github"></i>
        <a href="https://github.com/darkwarz">Author: Jabier Espinal </a> 
         </div>
